changed deprecated option name

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ addopts =
     -ra
     -v
     -s
-    --strict
+    --strict-markers
     --doctest-modules
     --doctest-glob=\*.rst
     --tb=short
