feat: expanded tests; api changes; devenv setup

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,14 @@ cython_debug/
 .idea
 .vscode
 .testmondata
+
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
+
