--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,19 +3,25 @@ name = "spacy-ebooks"
 version = "0.1.0"
 description = ""
 authors = ["Bor Hodošček <dev@bor.space>"]
+readme = "README.md"
+packages = [{include = "spacy_ebooks", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-spacy = "^3.2.0"
+python = "^3.11"
 EbookLib = "^0.17.1"
-en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0-py3-none-any.whl"}
+spacy = "^3.5.3"
+en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl" }
+pydantic = "^1.10.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
 pytest-watch = "^4.2.0"
 pytest-testmon = "^1.2.2"
-black = {version = "^21.10b0", allow-prereleases = true}
+ipykernel = "^6.8.0"
+xmltodict = "^0.12.0"
+black = "^22.1.0"
+loky = "^3.1.0"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
