--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ addopts =
     --tb=short
     --testmon
 filterwarnings =
-    ignore:.*plac.*is deprecated:DeprecationWarning
+    ignore:.*(plac|SelectableGroups).*is deprecated:DeprecationWarning
 
 [tool:isort]
 force_single_line = True
