--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ packages = [{include = "spacy_ebooks", from = "src"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 EbookLib = "^0.17.1"
-spacy = "^3.5.3"
+spacy = "^3.5.4"
 en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl" }
-pydantic = "^1.10.9"
+pydantic = "^1.10.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
@@ -21,6 +21,14 @@ ipykernel = "^6.8.0"
 xmltodict = "^0.12.0"
 black = "^22.1.0"
 loky = "^3.1.0"
+
+[tool.poetry.group.llm]
+optional = true
+
+[tool.poetry.group.llm.dependencies]
+spacy-llm = { version = "^0.3.2", extras = ["transformers"] }
+transformers = { version = "^4.30.1", extras = ["sentencepiece"] }
+accelerate = "^0.20.3"
 
 [build-system]
 requires = ["poetry-core"]
