--- a/llm/fewshot-ner-falcon-7b-tuned.cfg
+++ b/llm/fewshot-ner-falcon-7b-tuned.cfg
@@ -12,8 +12,8 @@ batch_size = 128
 factory = "llm"
 
 [components.llm.model]
-@llm_models = "spacy.StableLM.v1"
-name = "stablelm-tuned-alpha-3b"
+@llm_models = "spacy.Falcon.v1"
+name = "falcon-7b-instruct"
 
 [components.llm.task]
 @llm_tasks = "spacy.NER.v2"
