--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,13 @@ packages = [{include = "spacy_ebooks", from = "src"}]
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
 EbookLib = "^0.17.1"
-spacy = "^3.5.4"
-en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl" }
+spacy = "^3.6.0"
+en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl" }
 pydantic = "^1.10.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
-pytest-watch = "^4.2.0"
+pytest-watcher = "^0.3.4"
 pytest-testmon = "^1.2.2"
 ipykernel = "^6.8.0"
 xmltodict = "^0.12.0"
@@ -26,9 +26,17 @@ loky = "^3.1.0"
 optional = true
 
 [tool.poetry.group.llm.dependencies]
-spacy-llm = { version = "^0.3.2", extras = ["transformers"] }
+torch = {version = "^2.0.1+cu118", source = "pytorch"}
+spacy-llm = { version = "^0.4.0" } # , extras = ["transformers"] }
 transformers = { version = "^4.30.1", extras = ["sentencepiece"] }
 accelerate = "^0.20.3"
+einops = "^0.6.1"
+xformers = "^0.0.20"
+
+[[tool.poetry.source]]
+name = "pytorch"
+url = "https://download.pytorch.org/whl/cu118"
+priority = "explicit"
 
 [build-system]
 requires = ["poetry-core"]
