--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [{include = "spacy_ebooks", from = "src"}]
 python = ">=3.10,<4.0"
 EbookLib = "^0.17.1"
 spacy = "^3.6.0"
-en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl" }
+en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl"}
 pydantic = "^1.10.10"
 
 [tool.poetry.dev-dependencies]
@@ -26,16 +26,26 @@ loky = "^3.1.0"
 optional = true
 
 [tool.poetry.group.llm.dependencies]
-torch = {version = "^2.0.1+cu118", source = "pytorch"}
-spacy-llm = { version = "^0.4.2" } # , extras = ["transformers"] }
-transformers = { version = "^4.30.1", extras = ["sentencepiece"] }
+torch = {version = "^2.0.1+cpu", source = "pytorch-cpu"}
+spacy-llm = {version = "^0.4.2" } # , extras = ["transformers"]}
+transformers = {version = "^4.30.1", extras = ["sentencepiece"]}
 accelerate = "^0.20.3"
 einops = "^0.6.1"
 xformers = "^0.0.20"
 
 [[tool.poetry.source]]
-name = "pytorch"
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+priority = "explicit"
+
+[[tool.poetry.source]]
+name = "pytorch-cuda"
 url = "https://download.pytorch.org/whl/cu118"
+priority = "explicit"
+
+[[tool.poetry.source]]
+name = "pytorch-rocm"
+url = "https://download.pytorch.org/whl/rocm5.4.2"
 priority = "explicit"
 
 [build-system]
